--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="base:app_id" content="694a7cb94d3a403912ed7c8b" />
     <title>Base Identity & Reputation | On-chain Identity System</title>
   </head>
   <body>
